# mmemory

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: mmemory.h
src/: mmemory.c
